// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<H1 /> component should render correctly 1`] = `
<H1
  variant="h1"
/>
`;

exports[`<H1 /> component should render correctly 2`] = `
<Heading
  level={1}
/>
`;

exports[`<H2 /> component should render correctly 1`] = `
<H2
  variant="h2"
/>
`;

exports[`<H2 /> component should render correctly 2`] = `
<Heading
  level={2}
/>
`;

exports[`<H3 /> component should render correctly 1`] = `
<H3
  variant="h3"
/>
`;

exports[`<H3 /> component should render correctly 2`] = `
<Heading
  level={3}
/>
`;

exports[`<H4 /> component should render correctly 1`] = `
<H4
  variant="h4"
/>
`;

exports[`<H4 /> component should render correctly 2`] = `
<Heading
  level={4}
/>
`;

exports[`<H5 /> component should render correctly 1`] = `
<H5
  variant="h5"
/>
`;

exports[`<H5 /> component should render correctly 2`] = `
<Heading
  level={5}
/>
`;

exports[`<H6 /> component should render correctly 1`] = `
<H6
  variant="h6"
/>
`;

exports[`<H6 /> component should render correctly 2`] = `
<Heading
  level={6}
/>
`;

exports[`<Heading/> component level 1 should render correctly with children 1`] = `
<h1
  className="MuiTypography-root MuiTypography-h1"
>
  Heading text
</h1>
`;

exports[`<Heading/> component level 2 should render correctly with children 1`] = `
<h2
  className="MuiTypography-root MuiTypography-h2"
>
  Heading text
</h2>
`;

exports[`<Heading/> component level 3 should render correctly with children 1`] = `
<h3
  className="MuiTypography-root MuiTypography-h3"
>
  Heading text
</h3>
`;

exports[`<Heading/> component level 4 should render correctly with children 1`] = `
<h4
  className="MuiTypography-root MuiTypography-h4"
>
  Heading text
</h4>
`;

exports[`<Heading/> component level 5 should render correctly with children 1`] = `
<h5
  className="MuiTypography-root MuiTypography-h5"
>
  Heading text
</h5>
`;

exports[`<Heading/> component level 6 should render correctly with children 1`] = `
<h6
  className="MuiTypography-root MuiTypography-h6"
>
  Heading text
</h6>
`;
